force-app/main/default/objects/Account/fields/AccountLookUpField__c.field-meta.xml
<CustomField>
    <fullName>AccountLookUpField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountLookUpField</label>
    <referenceTo>ACR2__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>