force-app/main/default/objects/Account/fields/customFieldNew0806__c.field-meta.xml
<CustomField>
    <fullName>customFieldNew0806__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>customFieldNew0806</label>
    <length>20</length>
    <type>Text</type>
</CustomField>