force-app/main/default/objects/Account/fields/customFieldNew__c.field-meta.xml
<CustomField>
    <fullName>customFieldNew__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>customFieldNew</label>
    <length>12</length>
    <type>Text</type>
</CustomField>