force-app/main/default/objects/Account/fields/dariaTestFieldADS__c.field-meta.xml
<CustomField>
    <fullName>dariaTestFieldADS__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>dariaTestFieldADS</label>
    <type>TextArea</type>
</CustomField>