force-app/main/default/objects/Account/fields/Date_of_End__c.field-meta.xml
<CustomField>
    <fullName>Date_of_End__c</fullName>
    <label>Date of End</label>
    <type>Date</type>
</CustomField>