force-app/main/default/objects/Account/fields/f1__c.field-meta.xml
<CustomField>
    <fullName>f1__c</fullName>
    <description>ffdg</description>
    <formula>IsExcludedFromRealign</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>f1</label>
    <type>Checkbox</type>
</CustomField>