force-app/main/default/objects/Account/fields/GB__c.field-meta.xml
<CustomField>
    <fullName>GB__c</fullName>
    <label>GB</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GB</valueSetName>
    </valueSet>
</CustomField>