force-app/main/default/objects/Account/fields/GIRI_PS_F1__c.field-meta.xml
<CustomField>
    <fullName>GIRI_PS_F1__c</fullName>
    <label>GIRI_PS_F1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>