force-app/main/default/objects/Account/fields/GIRI_PS_ON_ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>GIRI_PS_ON_ACCOUNT__c</fullName>
    <label>GIRI_PS_ON_ACCOUNT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>