force-app/main/default/objects/Account/fields/Is_an_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Is_an_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is an email sent?</label>
    <type>Checkbox</type>
</CustomField>