force-app/main/default/objects/Account/fields/MyCoolCheckBox__c.field-meta.xml
<CustomField>
    <fullName>MyCoolCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Some Description</description>
    <inlineHelpText>Hello World!</inlineHelpText>
    <label>MyCoolCheckBox</label>
    <type>Checkbox</type>
</CustomField>