force-app/main/default/objects/Account/fields/TmobileEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>TmobileEmailAddress__c</fullName>
    <label>TmobileEmailAddress</label>
    <type>Email</type>
</CustomField>