force-app/main/default/objects/Account/validationRules/Account_Name_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name is mandatory</errorMessage>
</ValidationRule>